More unit testing, code coverage, and use Java 17